# PyAILearn

./: AI_USAGE.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE.txt  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
pyailearn/SupervisedLearning/: OneRuleClassifier.py  ZeroRuleClassifier.py  __init__.py
src/: README.md
src/pyailearn/SupervisedLearning/: __init__.py
